force-app/main/default/objects/custom_create276__c/custom_create276__c.object-meta.xml
<CustomObject>
    <label>Custom created object276</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects276</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>