force-app/main/default/objects/custom_create276__c/fields/custom_create_276field564__c.field-meta.xml
<CustomField>
    <fullName>custom_create_276field564__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 276field564</label>
    <type>Checkbox</type>
</CustomField>