force-app/main/default/objects/custom_create276__c/fields/custom_create_276field683__c.field-meta.xml
<CustomField>
    <fullName>custom_create_276field683__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 276field683</label>
    <type>Checkbox</type>
</CustomField>